Creado mediante Colaboratory

--- a/Taller_12_CVXPY_matricial.ipynb
+++ b/Taller_12_CVXPY_matricial.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -20,7 +19,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gabrielawad/talleresGoogleColab/blob/main/Taller_12_CVXPY_matricial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mildreth21/talleresGoogleColab/blob/main/Taller_12_CVXPY_matricial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -54,7 +53,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Tipos de variables en CVXPY\n",
+        "# Tipos de variables en CVXPY (pendiente actualizar)\n",
+        "\n",
+        "Incluir dual matricial: https://www.cvxpy.org/examples/basic/linear_program.html\n",
         "\n",
         "CVXPY permite crear variables, parámetros escalares y arreglos (vectores y matrices); para tal efecto sigue la sintaxis (formatos) de la librería [NumPy](https://docs.scipy.org/doc/numpy/index.html).\n"
       ]
@@ -149,7 +150,7 @@
         "# Configurar el problema\n",
         "prob_00 = cvx.Problem(obj_00, restricciones_00)\n",
         "\n",
-        "# Obtener el valor óptimo, actualizar el estado del problema \n",
+        "# Obtener el valor óptimo, actualizar el estado del problema\n",
         "#y los valores de todas las variables del problema\n",
         "prob_00.solve()\n",
         "\n",
@@ -174,7 +175,7 @@
       "source": [
         "## Solución matricial\n",
         "\n",
-        "El siguiente código resuelve el mismo ejercicio de forma matricial. \n",
+        "El siguiente código resuelve el mismo ejercicio de forma matricial.\n",
         "\n",
         "Para resolverlo se realizan los siguientes ajustes:\n",
         "\n",
@@ -203,9 +204,9 @@
         "   \n",
         "    \n",
         " \\-x + y >= -20\n",
-        " \n",
+        "\n",
         " x >= 0\n",
-        " \n",
+        "\n",
         " y >= 0\n",
         "\n",
         "De donde:\n",
@@ -250,7 +251,7 @@
         "# Configurar el problema\n",
         "prob_00_arr = cvx.Problem(obj_00_arr, arr_restricciones)\n",
         "\n",
-        "# Obtener el valor óptimo, actualizar el estado del problema \n",
+        "# Obtener el valor óptimo, actualizar el estado del problema\n",
         "#y los valores de todas las variables del problema\n",
         "prob_00_arr.solve()\n",
         "\n",
@@ -261,7 +262,7 @@
         "print(\"Valor óptimo de la función objetivo matricial:\", prob_00_arr.value)\n",
         "\n",
         "# Mostrar los valores óptimos de las variables de decisión matricial\n",
-        "print(\"Valores óptimos de las variables de decisión matricial:\", \n",
+        "print(\"Valores óptimos de las variables de decisión matricial:\",\n",
         "      arr_x[0].value, arr_x[1].value, \"\\n\")"
       ],
       "execution_count": null,
@@ -295,7 +296,8 @@
         "\n",
         "# Cargar coeficientes de costos desde una url\n",
         "# Establecer la ruta de los coeficientes de costos\n",
-        "ruta_c ='https://docs.google.com/spreadsheets/d/e/2PACX-1vRFLriI2aliprDmDCCKXKz8dBQFZGSrw7We_bq6tQKXPdDpAffIjtZ9fau9HhXJIPfelNZQ1hpBY9fH/pub?output=csv'\n",
+        "ruta_c ='https://docs.google.com/spreadsheets/d/e/2PACX-1vRFLriI2aliprDmDCCKXKz\\\n",
+        "8dBQFZGSrw7We_bq6tQKXPdDpAffIjtZ9fau9HhXJIPfelNZQ1hpBY9fH/pub?output=csv'\n",
         "\n",
         "# Cargar los coeficientes de costos con el método np.loadtxt()\n",
         "arr_url_c = np.loadtxt(ruta_c, delimiter=\",\", dtype=float)\n",
@@ -309,7 +311,8 @@
         "\n",
         "# Cargar los coeficientes técnicos desde una url\n",
         "# Establecer la ruta de los coeficientes técnicos\n",
-        "ruta_A ='https://docs.google.com/spreadsheets/d/e/2PACX-1vSwX-JTXjqsm2fM7pJmvwUbSUb8QQdhCPscJTSLLe_FS8NSsTR_WeqPbzOz40SVo_gnVr5EU4PN9P_r/pub?output=csv'\n",
+        "ruta_A ='https://docs.google.com/spreadsheets/d/e/2PACX-1vSwX-JTXjqsm2fM7pJmvw\\\n",
+        "UbSUb8QQdhCPscJTSLLe_FS8NSsTR_WeqPbzOz40SVo_gnVr5EU4PN9P_r/pub?output=csv'\n",
         "\n",
         "# Cargar el arreglo con los coeficientes técnicos con el método np.loadtxt()\n",
         "arr_url_A = np.loadtxt(ruta_A, delimiter=\",\", dtype=float)\n",
@@ -320,7 +323,8 @@
         "\n",
         "# Cargar las restricciones desde una url\n",
         "# Establecer la ruta de las restricciones\n",
-        "ruta_b='https://docs.google.com/spreadsheets/d/e/2PACX-1vSILEeSPXklgIr36YnJeKw1Ab4tFYF4x04IxqhCrDfyYzsqxmPEHjz1ZjKeGQh2IcELgDzu0sskTXCF/pub?output=csv'\n",
+        "ruta_b='https://docs.google.com/spreadsheets/d/e/2PACX-1vSILEeSPXklgIr36YnJe\\\n",
+        "Kw1Ab4tFYF4x04IxqhCrDfyYzsqxmPEHjz1ZjKeGQh2IcELgDzu0sskTXCF/pub?output=csv'\n",
         "\n",
         "# Cargar el arreglo con las restricciones con el método np.loadtxt()\n",
         "arr_url_b= np.loadtxt(ruta_b, delimiter=\",\", dtype=float).reshape((4,1))\n",
@@ -332,7 +336,7 @@
         "# Configurar el problema\n",
         "prob_00_arr_url = cvx.Problem(obj_00_arr_url, arr_url_restricciones)\n",
         "\n",
-        "# Obtener el valor óptimo, actualizar el estado del problema \n",
+        "# Obtener el valor óptimo, actualizar el estado del problema\n",
         "#y los valores de todas las variables del problema\n",
         "prob_00_arr_url.solve()\n",
         "\n",
@@ -343,7 +347,7 @@
         "print(\"Valor óptimo de la función objetivo matricial:\", prob_00_arr_url.value)\n",
         "\n",
         "# Mostrar los valores óptimos de las variables de decisión matricial\n",
-        "print(\"Valores óptimos de las variables de decisión matricial:\", \n",
+        "print(\"Valores óptimos de las variables de decisión matricial:\",\n",
         "      arr_url_x[0].value, arr_url_x[1].value, \"\\n\")"
       ],
       "metadata": {
@@ -389,10 +393,10 @@
         "\n",
         "# Restricción de capacidad de molino\n",
         "2*qTorta <= 10,\n",
-        "    \n",
+        "\n",
         "# Restricción de capacidad de empacado\n",
         "3*qTorta<= 16,\n",
-        "    \n",
+        "\n",
         "# Restricción de no negatividad\n",
         "qTorta >= 0\n",
         "]\n",
@@ -410,21 +414,34 @@
         "print(\"Ingreso máximo:\", probIndFel.value)\n",
         "\n",
         "# Mostrar los valores óptimos de las variables de decisión\n",
-        "print(\"Cantidad de mezcla de tortas que maximiza el ingreso por ventas:\", qTorta.value)"
+        "print(\"Cantidad de mezcla de tortas que maximiza el ingreso por ventas:\",\n",
+        "      qTorta.value)"
       ],
       "metadata": {
-        "id": "KZrbP3LaUK4J"
+        "id": "KZrbP3LaUK4J",
+        "outputId": "d4efc1e7-3589-44d4-c1f2-6b1c33591c27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Estado de la solución: optimal\n",
+            "Ingreso máximo: 1249999.9989153617\n",
+            "Cantidad de mezcla de tortas que maximiza el ingreso por ventas: 4.9999999956614465\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Solución matricial\n",
-        "# Escriba acá el código para resolver de forma matricial el ejercicio anterior\n",
-        "\n",
-        "\n"
+        "# Escriba acá el código para resolver de forma matricial el ejercicio anterior\n"
       ],
       "metadata": {
         "id": "sauXWi-mkvoP"
@@ -442,9 +459,9 @@
         "\n",
         "Tomado del libro de [TAHA, 2012](https://fad.unsa.edu.pe/bancayseguros/wp-content/uploads/sites/4/2019/03/investigacic3b3n-de-operaciones-9na-edicic3b3n-hamdy-a-taha-fl.pdf), ejemplo 2.1-1 página 13.\n",
         "\n",
-        "Reddy Mikks se propone determinar la combinación óptima de pinturas para interiores y exteriores que maximice la utilidad diaria total. \n",
+        "Reddy Mikks se propone determinar la combinación óptima de pinturas para interiores y exteriores que maximice la utilidad diaria total.\n",
         "\n",
-        "Variables de decisión: \n",
+        "Variables de decisión:\n",
         "\n",
         "Xi = toneladas producidas diariamente de la pintura tipo i.\n",
         "Sea i {1 = para exteriores, 2 = para interiores}\n",
@@ -490,21 +507,21 @@
         "\n",
         "# Consumo de materia prima M1\n",
         "6*exterior + 4*interior <= 24,\n",
-        " \n",
+        "\n",
         "# Consumo de materia prima M2\n",
-        "1*exterior + 2*interior <= 6,    \n",
-        "    \n",
+        "1*exterior + 2*interior <= 6,\n",
+        "\n",
         "# Límites de demanda diaria\n",
         "interior - exterior <= 1,\n",
-        "    \n",
+        "\n",
         "# Demanda diaria para pintura de interiores\n",
         "interior <= 2,\n",
-        "    \n",
+        "\n",
         "# Restricción de no negatividad\n",
         "exterior >= 0,\n",
         "\n",
         "interior >= 0\n",
-        "    \n",
+        "\n",
         "]\n",
         "\n",
         "# Configurar el problema\n",
@@ -523,10 +540,14 @@
         "print(\"Utilidad máxima aproximada a dos decimales:\", \"%.2f\"% probRM.value)\n",
         "\n",
         "# Mostrar los valores óptimos de las variables de decisión\n",
-        "print(\"Toneladas producidas de pinturas para exteriores que optimizan las utilidades SIN aproximaciones:\", exterior.value)\n",
-        "print(\"Toneladas producidas de pinturas para exteriores que optimizan las utilidades:\", \"%.2f\"% exterior.value)\n",
-        "print(\"Toneladas producidas de pinturas para interiores que optimizan las utilidades SIN aproximaciones:\", interior.value)\n",
-        "print(\"Toneladas producidas de pinturas para interiores que optimizan las utilidades:\", \"%.2f\"% interior.value)"
+        "print(\"Toneladas de pinturas para exteriores que optimizan las utilidades\",\n",
+        "      \"SIN aproximaciones:\", exterior.value)\n",
+        "print(\"Toneladas de pinturas para exteriores que optimizan las utilidades:\",\n",
+        "      \"%.2f\"% exterior.value)\n",
+        "print(\"Toneladas de pinturas para interiores que optimizan las utilidades\",\n",
+        "      \"SIN aproximaciones:\", interior.value)\n",
+        "print(\"Toneladas de pinturas para interiores que optimizan las utilidades:\",\n",
+        "      \"%.2f\"% interior.value)"
       ],
       "execution_count": null,
       "outputs": []
@@ -535,9 +556,7 @@
       "cell_type": "code",
       "source": [
         "# Solución matricial\n",
-        "# Escriba acá el código para resolver de forma matricial el ejercicio anterior\n",
-        "\n",
-        "\n"
+        "# Escriba acá el código para resolver de forma matricial el ejercicio anterior\n"
       ],
       "metadata": {
         "id": "q3NoT9SllA_E"
@@ -555,7 +574,7 @@
         "\n",
         "Tomado del libro de [TAHA, 2012](https://fad.unsa.edu.pe/bancayseguros/wp-content/uploads/sites/4/2019/03/investigacic3b3n-de-operaciones-9na-edicic3b3n-hamdy-a-taha-fl.pdf), ejemplo 2.1-1 página 24.\n",
         "\n",
-        "Variables de decisión: \n",
+        "Variables de decisión:\n",
         "\n",
         "X1: Libras de maíz en la mezcla diaria\n",
         "\n",
@@ -588,7 +607,11 @@
     },
     {
       "metadata": {
-        "id": "DeKpD7K7k4GR"
+        "id": "DeKpD7K7k4GR",
+        "outputId": "c2177b58-37a2-4808-c28a-29b22f8b06d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -602,7 +625,6 @@
         "maiz = cvx.Variable()\n",
         "soya = cvx.Variable()\n",
         "\n",
-        "\n",
         "# Definir la función objetivo para minimizar el costo\n",
         "objDieta = cvx.Minimize(0.3*maiz + 0.9*soya)\n",
         "\n",
@@ -611,17 +633,16 @@
         "\n",
         "# Necesidades dietéticas de proteína\n",
         "0.21*maiz - 0.3*soya <= 0,\n",
-        " \n",
+        "\n",
         "# Necesidades dietéticas de fibra\n",
-        "0.03*maiz - 0.01*soya >= 0,    \n",
-        "    \n",
+        "0.03*maiz - 0.01*soya >= 0,\n",
+        "\n",
         "# Consumo mínimo de mezlca diaria\n",
         "soya + maiz >= 800,\n",
-        "    \n",
+        "\n",
         "# Restricción de no negatividad\n",
         "maiz >= 0,\n",
         "soya >= 0\n",
-        "    \n",
         "]\n",
         "\n",
         "# Configurar el problema\n",
@@ -631,7 +652,7 @@
         "probDieta.solve()\n",
         "\n",
         "# Mostrar el estado de la solución\n",
-        "print(\"Estado de la solución:\", probDieta.status)\n",
+        "print(\"Estado de la solucion:\", probDieta.status)\n",
         "\n",
         "# Mostrar el valor óptimo de la función objetivo sin aproximaciones\n",
         "print(\"Costo mínimo SIN aproximaciones:\", probDieta.value)\n",
@@ -640,22 +661,42 @@
         "print(\"Costo mínimo aproximada a dos decimales:\", \"%.2f\"% probDieta.value, \"\\n\")\n",
         "\n",
         "# Mostrar los valores óptimos de las variables de decisión sin aproximaciones\n",
-        "print(\"Cantidad de libras de maíz que minimizan el costo SIN aproximaciones:\", maiz.value)\n",
-        "print(\"Cantidad de libras de soya que minimizan el costo SIN aproximaciones:\", soya.value, \"\\n\")\n",
+        "print(\"Libras de maíz que minimizan el costo SIN aproximaciones:\",\n",
+        "      maiz.value)\n",
+        "print(\"Libras de soya que minimizan el costo SIN aproximaciones:\",\n",
+        "      soya.value, \"\\n\")\n",
         "\n",
-        "# Mostrar los valores óptimos de las variables de decisión aproximado a dos decimales\n",
-        "print(\"Cantidad de libras de maíz que minimizan el costo aproximada a dos decimales:\", \"%.2f\"%  maiz.value)\n",
-        "print(\"Cantidad de libras de soya que minimizan el costo aproximada a dos decimales:\", \"%.2f\"%  soya.value)"
+        "# Mostrar valores óptimos de las variables de decisión aproximados\n",
+        "#a dos decimales\n",
+        "print(\"Libras de maíz que minimizan el costo aproximada a dos decimales:\",\n",
+        "      \"%.2f\"%  maiz.value)\n",
+        "print(\"Libras de soya que minimizan el costo aproximada a dos decimales:\",\n",
+        "      \"%.2f\"%  soya.value)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Estado de la solucion: optimal\n",
+            "Costo mínimo SIN aproximaciones: 437.64705882254106\n",
+            "Costo mínimo aproximada a dos decimales: 437.65 \n",
+            "\n",
+            "Libras de maíz que minimizan el costo SIN aproximaciones: 470.58823529023397\n",
+            "Libras de soya que minimizan el costo SIN aproximaciones: 329.4117647060787 \n",
+            "\n",
+            "Libras de maíz que minimizan el costo aproximada a dos decimales: 470.59\n",
+            "Libras de soya que minimizan el costo aproximada a dos decimales: 329.41\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Solución matricial\n",
         "# Escriba acá el código para resolver de forma matricial el ejercicio anterior\n",
-        "\n",
         "\n"
       ],
       "metadata": {
@@ -688,16 +729,51 @@
     {
       "cell_type": "code",
       "source": [
-        "# Resuelva de forma matricial el ejercicio\n",
+        "# Este código presenta la solución de un ejercicio de forma algebraica\n",
         "\n",
+        "print (\"Solución algebraica\")\n",
+        "# Importar la librería que se va a utilizar\n",
+        "import cvxpy as cvx\n",
         "\n",
-        "\n"
+        "# Crear las variables a optimizar\n",
+        "\n",
+        "x1 = préstamos personales\n",
+        "x2 = préstamos para automóvil\n",
+        "x3 = préstamos para casa\n",
+        "x4 = préstamos agrícolas\n",
+        "x5 = préstamos comerciales\n",
+        "\n",
+        "# Definir la función objetivo para maximizar el rendimiento neto\n",
+        "Interés total = .126x1 + .1209x2 + .1164x3 + .11875x4 + .098x5\n",
+        "\n",
+        "Maximizar z = Interes total – Deuda impagable\n",
+        "\n",
+        "# Establecer las restricciones\n",
+        "x1 + x2 + x3 + x4 + x5 <= 12\n",
+        "x4 + x5 >= .4(x1 + x2 + x3 + x4 + x5)\n",
+        "x3 >= .5(x1 + x2 + x3)\n",
+        ".06x1 + .03x2 - .01x3 + .01x4 - .02x5 <= 0\n",
+        "x1 Ú >=,x2 >= 0,x3 >= 0,x4 >= 0,x5 >= 0"
       ],
       "metadata": {
-        "id": "n2v2uvLkZD0s"
+        "id": "n2v2uvLkZD0s",
+        "outputId": "88d3f348-7347-424e-8a27-bd68b18abdcf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-d49355bb0c49>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    Interés total = .126x1 + .1209x2 + .1164x3 + .11875x4 + .098x5\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid decimal literal\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -713,10 +789,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Resuelva de forma matricial el ejercicio\n",
-        "\n",
-        "\n",
-        "\n"
+        "# Resuelva de forma matricial el ejercicio\n"
       ],
       "metadata": {
         "id": "nEHnjFNraLvf"
@@ -738,10 +811,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Resuelva de forma matricial el ejercicio\n",
-        "\n",
-        "\n",
-        "\n"
+        "# Resuelva de forma matricial el ejercicio\n"
       ],
       "metadata": {
         "id": "yN0MvrQ4ao7v"
